--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
   "rewrites": [
     {
+      "source": "/skip-slinky",
+      "destination": "https://skip-slinky.mintlify.app"
+    },
+    {
       "source": "/skip-slinky/:match*",
       "destination": "https://skip-slinky.mintlify.app/:match*"
     }
